--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test1",
   "version": "0.1.0",
+  "prettier": "@titicaca/eslint-config-triple/prettierrc",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,7 +21,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:es": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint:es:fix": "npm run lint:es -- --fix",
+    "lint:etc": "prettier \"**/*.{json,yaml,md}\" --check",
+    "lint:etc:fix": "prettier \"**/*.{json,yaml,md}\" --write"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@titicaca/eslint-config-triple": "^3.1.0",
+    "eslint": "^8.18.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^2.7.1"
   }
 }
